# CS510-RustWebDevelopment

./: README.md
Assignment/: Cargo.toml
Assignment/src/: questions_database.rs  request_handlers.rs
Backend/: Cargo.toml
Backend/src/: questions_database.rs  request_handlers.rs  request_routes.rs
Frontend/: Cargo.toml
Frontend/src/: main.rs  route_handlers.rs  routes.rs
Frontend/templates/: index.css  index.html  index.js
Homework1/: Cargo.toml
Homework1/src/: questions_database.rs
homework1/: .env  Cargo.toml
homework1/src/: main.rs  questions_database.rs  request_handlers.rs  request_routes.rs
